Fix bio sizing for weird spacing characters

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -231,7 +231,7 @@
   }
 
   .user-bio {
-    max-width: 460px;
+    max-width: 480px;
     @media (max-width: 850px) {
       max-width: 350px;
     }
